--- a/CSS3/Pepsi clone/style.css
+++ b/CSS3/Pepsi clone/style.css
@@ -7,9 +7,12 @@
     padding: 0;
     font-family: Sofia Pro Regular, Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+body{
+    background-color: #0065c3;
+}
 .nav-sec{
     background-color: #0065c3 !important;
-    position: fixed !important;
+    position: fixed;
     width: 100%;
     z-index: 99999999;
 }
@@ -74,6 +77,7 @@
     margin-left: 150px !important;
     font-size: 16px !important;
 }
+ 
 /* HERO 2 Section CSS STARTS HERE */
 .hero2{
     background-color: black;
@@ -329,4 +333,53 @@ footer{
     color: white;
     padding-left: 20px;
 }
+
 /* Footer CSS Ends Here */
+
+@media only screen and (max-width: 1025px) {
+    .hero{
+        height: auto;
+    }
+    .hero-img{
+     display: flex;
+     flex-direction: column-reverse;
+     margin: 0;
+     padding: 0;
+     border: 2px solid black;
+     padding-top: 100px;
+    }
+    .hero-img>div{
+        margin: 0 auto;
+    }
+    .hero-img1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-height: 506px;
+        border: 2px solid orange;
+    }footer{
+        height: 67vh !important;
+    }
+    .footer-main{
+        border: 2px solid saddlebrown;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        justify-content: center;
+        text-align: center;
+    }
+    .footer-main div {
+        margin: 0 !important;
+    }
+    .footer-main div p{
+        margin-bottom: 0 !important;
+    }
+    .footer-img{
+        display: none;
+    }
+    /* hr{
+        display: block !important;
+        color: white !important;
+    } */
+}
