--- a/CSS4-Assignment/style.css
+++ b/CSS4-Assignment/style.css
@@ -1,15 +1,22 @@
+@font-face {
+    font-family: gilroy-light;
+    src: url(fonts/Gilroy-Light.otf)
+}
+@font-face {
+    font-family: gilroy-dark;
+    src: url(fonts/Gilroy-ExtraBold.otf)
+}
 body{
     padding: 0;
     margin: 0;
+    font-family: gilroy-light;
     box-sizing: border-box;
 }
-/* colgroup:#75BF7A; */
 .nav-main{
     display: flex;
     justify-content: space-between !important;
     width: 90%;
-    margin: 0 auto;
-    margin: 30px 0px;
+    margin: 30px auto;
 }
 .nav-logo{
     display: flex;
@@ -23,6 +30,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+    font-family: gilroy-dark;
 }
 .nav-item>li,a{
     list-style: none;
@@ -40,25 +48,168 @@ body{
 
 /* HERO CSS STARTS HERE */
 .hero{
-    height: 60vh;
+    height: 75vh;
     width: 90%;
     margin: 0 auto;
 }
 .hero-main{
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: flex-end;
+    justify-content: space-between;
     height: 100%;
-    border: 2px solid saddlebrown;
 }
 .hero-text{
-    width: 40%;
-    border: 2px solid black;
+    width: 50%;   
 }
 .hero-text > h1{
-    font-size: 50px;
+    font-size: 52px;
+    font-family: gilroy-dark;
+}
+.sim-text{
+    color: rgb(65, 58, 58);
+    font-size: 20px;
 }
 .store-icon{
-    margin-top: 90px;
+    padding-top: 25px;
+    word-spacing: 1.5rem;
+    margin-bottom: 0;
+}
+.apply{
+    width: 90%;
+    margin: 50px auto;
+    background-color: #75BF7A;
+    color: white;
+    border-radius: 7px;
+}
+.apply-main{
+    padding: 20px 90px;
+    display: flex;
+    font-size: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+.input-div{
+    width: 58%;
+}
+.apply-text{
+    font-size: 24px;
+}
+#mob-num{
+    border-radius: 5px;
+    border: none;
+    height: 50px;
+    width: 300px;
+    font-size: 16px !important;
+}
+.apply-btn{
+    height: 53px;
+    width: 200px;
+    border-radius: 5px;
+    border: none;
+    background-color: black;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
 }
 /* HERO CSS ENDS HERE */
+
+/* TERE WORKS CSS STARTS HERE */
+.work-main{
+    text-align: center;
+}
+.heading{
+    font-size: 36px;
+    font-family: gilroy-dark;
+}
+.tere-color{
+    color: #75BF7A;
+}
+.para{
+    font-size: 20px;
+    color: rgb(65, 58, 58) ;
+}
+.work-main2{
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    margin: 50px auto;
+}
+.sd1{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: space-evenly;
+    text-align: end;
+    width: 60%;
+}
+.sd2{
+    width: 100%;
+    background-image: url(images/Ellipse\ 1.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.sd3{
+    text-align: start;
+}
+h3{
+    font-family: gilroy-dark;
+}
+/* .work-grp{
+    position: ;
+} */
+.work-num{
+    color: #75BF7A;
+    font-size: 2rem;    
+    position: relative;
+    left: -40px;
+    top: -20px;
+}
+/* TERE WORKS CSS ENDS HERE */
+
+/* TERE BENEFITS CSS STARTS HERE */
+.tere-benefit{
+    margin: 40px 0px;
+}
+.tere-benefit >h1{
+    text-align: center;
+}
+.benefits{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: 40px auto;
+}
+.tere-num{
+    color: #75BF7A;
+    font-family: gilory-dark;
+    font-size: 72px;
+    font-weight: bolder;
+}
+.benefit-sm{
+    padding: 20px;
+    width: 40%;
+}
+.num-head{
+    display: inline-block;
+}
+/* TERE BENEFITS CSS ENDS HERE */
+
+/* FOOTER CSS STARTS HERE */
+.foter{
+    height: 40vh;
+    margin: 20px 0px;
+}
+.footer-div{
+    background-color: #ECECEC;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.footer-div>li{
+    list-style: none;
+}
+.develop{
+    text-align: center;
+}
+/* FOOTER CSS ENDS HERE */
