--- a/CSS3/Grumpy Bear/style.css
+++ b/CSS3/Grumpy Bear/style.css
@@ -6,6 +6,9 @@
     font-family: "Helvetica";
     src: url(fonts/Helvetica-Neue-WGL.woff);
 }
+html,body{
+    overflow-x: hidden;
+}
 body{
     margin: 0;
     padding: 0;
@@ -162,16 +165,16 @@ body{
     background-color: #fce956;
     padding: 20px;
     margin-bottom: 40px;
-    height: 200px;
+    height: auto;
 }
 .imp-not{
-    padding: 30px;
+    padding-left: 30px;
     margin-top: 20px;
 }
 .prcnt{
     border: 3px solid #000000;
     padding: 15px 40px;
-    font-size: 48px;
+    font-size: 38px;
     font-family: "Fidel-Black";
 }.imp-not >h1{
     font-family: "Fidel-Black";
@@ -282,6 +285,11 @@ footer{
     }
 
 }
+@media only screen and (max-width:500px) {
+    .mobile{
+        width: 350px !important;
+    }
+}
 @media only screen and (max-width: 760px) {
     .hero>img{
         display: none;
@@ -309,19 +317,33 @@ footer{
 }
 /* NAVBAR MEDIA QUERY ENDS HERE */
 /* Heck Media Query Starts Here */
+@media only screen and (max-width: 1200px) {
+    .nav-2{
+        width: 98% !important;
+        align-items: center;
+        align-content: center;
+    }.nav-item{
+        padding-left: 10px;
+    }
+}
+
 @media only screen and (max-width: 900px) {
     .heck{
         height: 140vh;
     }
     .heck-text{
         width: 60% !important;
-        margin-left: 10px !important;
+        margin-left: 0 !important;
     }
     .heck-img{
         padding-left: 0;
         width: 40% !important;
     }.bear-3{
         width: 250px;
+    }.bear-2{
+        width: 400px !important;
+    }.hero-text{
+        left: 150px;
     }
 }
 @media only screen and (max-width: 760px) {
@@ -354,6 +376,9 @@ footer{
     .traits{
         margin-left: 80px !important;
     }
+    .roadmap-dis > p,.imp-not>p{
+        font-size: 18px !important;
+    }
 }
 @media only screen and (max-width: 880px) {
     .rarity-main{
@@ -368,6 +393,12 @@ footer{
         width: 95%;
     }.st{
         font-size: xx-large;
+    }
+    .team-div{
+        flex-wrap: wrap;
+    }.team{
+        height: auto;
+
     }
 }
 /* RARITY MEDIA QUERY STARTS HERE */
@@ -390,4 +421,33 @@ footer{
         font-size: 16px;
         padding-top: 20px;
     }
+    .road-main{
+        width: 99% !important;
+    }.prcnt{
+        font-size: 30px;
+        padding: 10px 15px;
+    }
+    .rd-hero{
+        width: 100%;
+    }
+    .roadmap-dis >p,.imp-not>p{
+        font-size: 14px !important;
+        margin-left: 5px !important;
+    }.imp-not >h1{
+        font-size: 32px;
+    }
+    .imp-nt{
+        justify-content: space-around;
+    }
+}
+@media only screen and (max-width: 360px) {
+
+.hero-text{
+    width: 270px !important;
+}
+.mobile{
+    width: 300px !important;
+}.front-pg{
+    height: auto;
+}
 }
