--- a/JS Calculator/style.css
+++ b/JS Calculator/style.css
@@ -1,13 +1,16 @@
+body{
+    margin: 0;
+    padding: 0;
+}
 section{
-    width: 70%;
-    margin: 50px auto;
+    margin: 50px;
     height: 80vh;
 }
 .cal-main{
     border: 1px solid black;
     border-radius: 15px;
     height: 75vh;
-    width: 30%;
+    width: 280px;
     margin: 0 auto;
     background-color: black;
     color: white;
@@ -15,7 +18,7 @@ section{
 .input-sec{
     padding: 15%;
     width: 70%;
-    font-size: 52px;
+    font-size: 32px;
     background-color: black;
     color: white;
     border: none !important;
