--- a/JS-09/style.css
+++ b/JS-09/style.css
@@ -43,3 +43,10 @@ textarea{
 button{
     width: 100%;
 }
+.main2{
+    display: none;
+    margin-top: 20px;
+}
+.textarea-inp{
+    min-height: 30vh;
+}
