--- a/JS-09/style.css
+++ b/JS-09/style.css
@@ -1,11 +1,7 @@
 .main{
     border: 1px solid  black;
-    margin: auto;
-    width: 40%;
-    /* display: flex; */
-    /* flex-direction: column;
-    align-items: center;
-    align-content: center; */
+    margin: 20px auto;
+    width: 370px;
 }
 h1{
     text-align: center;
@@ -50,4 +46,16 @@ button{
 .textarea-inp{
     min-height: 30vh;
     background-color: rgb(235, 234, 233);
+}
+.text-color-div{
+    width: 30%;
+    margin: 0 auto;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#text-col{
+    height: 30px;
+    width: 30px;
 }
