--- a/JS-10(object)/style.css
+++ b/JS-10(object)/style.css
@@ -3,5 +3,14 @@
     margin-right: 10px;
 }
 .row{
-    margin-left: 7px;
+    margin-left: 2px;
+}
+.card-wid{
+    width: 100%;
+    height: 250px;
+    object-fit: fill;
+}
+.navbar{
+    width: 70%;
+    margin: 0 auto;
 }
