--- a/JS-10(object)/style.css
+++ b/JS-10(object)/style.css
@@ -7,10 +7,18 @@
 }
 .card-wid{
     width: 100%;
-    height: 250px;
+    height: 220px;
     object-fit: fill;
 }
 .navbar{
-    width: 70%;
+    width: 90%;
     margin: 0 auto;
+}
+.img{
+    width: 150px;
+    height: 70px;
+}
+.nav-item{
+    display: flex;
+    width: 70%;
 }
