--- a/JS-QuizApp/style.css
+++ b/JS-QuizApp/style.css
@@ -2,6 +2,13 @@
     margin: 0;
     padding: 0;
 }
+@font-face {
+    font-family: popins;
+    src: url(fonts/Poppins-Regular.ttf);
+}
+body{
+    font-family: popins;
+}
 .main{
     background-image: url(images/bg-01.jpg);
     height: 100vh;
@@ -12,15 +19,14 @@
     align-items: center;
 }
 .login{
-    margin: 15px;
+    margin: 5px 15px 5px 15px;
     background-color: #fff;
     border-radius: 10px;
-    width: 500px;
+    width: 450px;
     height: 95vh;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 50px;
 }
 input{
@@ -30,29 +36,90 @@ input{
 input:focus{
     outline: none;
 }
-input::before{
-    content: "&#xF4E1";
-    display: block;
-    color: blue;
+.icons{
+    margin-right: 10px;
 }
 h1{
     text-align: center;
     font-weight: 800;
     font-size: 50px;
 }
-button{
+.login-button{
     width: 100%;
     padding: 10px;
     border-radius: 25px;
     border: none;
     font-size: larger;
     font-weight: bold;
-    margin-top: 30px;
+    margin-top: 10px;
     background-image: url(images/bg-01.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
 }
-/* .forgot{
-    text-align: center !important;
-} */
+
+.forgot{
+    font-size: small;
+    text-align: right;
+    margin-top: 0px !important;
+}
+.forgot >a {
+    text-decoration: none;
+    color: #666666;
+}
+.hrNew{
+    margin-bottom: 5px !important;
+}
+.links-div{
+    margin: 0 auto;
+    text-align: center;
+}
+.links-text{
+    margin-bottom: 30px;
+}
+.icon-item >i{
+    padding: 10px 15px;
+    border-radius: 50px;
+    font-size: larger;
+    color: #fff; 
+}
+
+/* login page CSS Ends here */
+body{
+    background-color: #f1eeee;
+}
+
+.div-main{
+    background-color: #fff;
+    margin: 30px;
+    padding: 10px;
+}
+.navbar{
+    display: flex;
+    background-color: #fff !important;
+
+}
+.navbar > p{
+    margin: 0;
+}
+.options{
+    margin-left: 30px;    
+}
+.options >option{
+    padding-top: 10px;
+}
+.next{
+    padding: 10px 30px;
+    border-radius: 10px;
+    background-color: #fff;
+    border: 2px solid #666666;
+    color: #666666;
+}
+.next-div{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+.options >option:hover{
+    background-color: #f8f8f8;
+}
