--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: fonts-new;
+    src: url(fonts/PlayfairDisplay-Italic.ttf);
+}
 body{
     background-color: #0f1624;
     color: #fff;
+    font-family: fonts-new;
 }
 .profile{
     border-radius: 30px;
@@ -21,20 +26,7 @@ body{
     width: 160px;
     justify-content: space-around;
 }
-@media only screen and (max-width: 991px) {
-    .nav-list{
-        margin: 0;
-        width: 100%;
-    }
-    .after-collapse{
-        margin: 0 auto;
-        padding: 0;
-        text-align: center;
-    }
-    .links-list{
-        margin: 0 auto;
-    }
-}
+
 
 /* Navbar Ends Here */
 
@@ -61,4 +53,51 @@ body{
     border: none;
     background: linear-gradient(to right,#13ADC7,#6978D1,#945DD6);
     color: #fff;
+}
+
+.about{
+    height: 99vh;
+}
+
+/* Media Query */
+@media only screen and (max-width: 991px) {
+    .nav-list{
+        margin: 0;
+        width: 100%;
+    }
+    .after-collapse{
+        margin: 0 auto;
+        padding: 0;
+        text-align: center;
+    }
+    .links-list{
+        margin: 0 auto;
+    }
+    .hero{
+        width: 95%;
+    }
+    .hero-text{
+        padding: 0;
+    }
+    .bg{
+        height: 320px;
+    }
+}
+@media only screen and (max-width: 810px) {
+    .hero{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin-top: 20px;
+        height: auto;
+    }
+    .hero-text, .bg-pic{
+        width: 90%;
+        margin: 20px;
+    }
+    .bg{
+        width: 90%;
+    }
 }
