--- a/Weather-App/style.css
+++ b/Weather-App/style.css
@@ -1,30 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+
+body{
+    background-image: url(images/bg-img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Roboto Mono', monospace;
+}
 .weather-sec{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    align-content: space-between;
-    justify-content: center;
+    height: 80vh;
+    margin: 0 auto;
 }
 .main{
-    border: 1px solid black;
-    height: 70vh;
-    width: 550px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+    background-color: rgb(240, 237, 237);
+    width: 80%;
+    margin: 10px auto;
+    border-radius: 5px;
 }
-/* .input-sec{
-    
-} */
+.input-sec{
+    width: 95%;
+    margin: 0px auto !important;
+    padding-top: 20px;
+}
+input{
+    border-radius: 5px;
+    border: none;
+    height: 40px;
+    padding: 10px;
+}
+#search> i{
+    font-size: 28px;
+    color: aqua;
+    position: relative;
+    top: 6px;
+    /* border: 1px solid black; */
+}
+input{
+    width: 90%;
+}
 .input-main{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin: 30px;
 }
-.input-main >img{
-    margin-top: 20px;
-    width: 100px;
+img{
+    width: 50px;
+    margin-right: 20px;
+}
+h1{
+    font-weight: bold;
+    color: black;
+}
+.img-sec{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    margin: 20px 0px;
 }
