--- a/JS-13(StopWatch&timer)/style.css
+++ b/JS-13(StopWatch&timer)/style.css
@@ -1,9 +1,21 @@
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.body{
+    width: 100%;
+    display: flex;
+    height: 100vh;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    border: 1px solid saddlebrown;
+}
 .main{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     width: 70%;
-    height: 50vh;
-    margin: 0 auto;
+    height: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
