--- a/JS-13(StopWatch&timer)/style.css
+++ b/JS-13(StopWatch&timer)/style.css
@@ -10,7 +10,9 @@
     /* flex-direction: column; */
     align-items: center;
     justify-content: center;
-    border: 1px solid saddlebrown;
+    background-image: url(images/omid-armin-spYYjjazRXI-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .main{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
@@ -19,21 +21,28 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border: 2px solid white;
+    color: white;
+    border-radius: 10px;
 }
 .head{
-    border: 1px solid rgb(231, 228, 228);
+    border: 1px solid white;
     height: 60px;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
 }
 a{
     text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: x-large;
 }
 i{
     margin-right: 10px;
-    color: blue;
+    color: white;
 }
 .bottom{
     display: flex;
@@ -49,4 +58,24 @@ i{
 .num{
     font-size: 92px;
     margin-left: 20px;
+}
+.num-inp{
+    width: 100px;
+    height: 20vh;
+    font-size: 80px;
+    background: none;
+    padding-bottom: 30px;
+    border: none;
+    margin-left: 10px;
+    color: #fff;
+}
+input:focus{
+    border: none !important;
+    outline: none;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
