--- a/NamazTimingApp/style.css
+++ b/NamazTimingApp/style.css
@@ -7,14 +7,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100dvh;
+    height: 100svh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
 }
 .main{
-    width: 650px;
+    width: 60%;
     height: 400px;
     margin-bottom: 20px;
     border-radius: 10px;
