--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -198,3 +198,9 @@ footer{
         justify-content: center;
     }
 }
+
+[data-aos^=fade][data-aos^=fade] {
+    opacity: 0.4;
+    transition-property: opacity,transform;
+}
+
